ui/packages/catalog-ui-search/src/main/webapp/component/filter/filter.less
@{customElementNamespace}filter {
  width: auto;
  height: 100%;
  display: block;
  white-space: nowrap;
  margin: @minimumSpacing 0px @minimumSpacing @minimumSpacing;
  padding: @minimumSpacing 1.5rem @minimumSpacing 0px;

  > .filter-remove,
  > .filter-attribute,
  > .filter-comparator,
  > .filter-input {
    display: inline-block;
    vertical-align: middle;
    margin-right: @minimumSpacing;
    height: @minimumButtonSize;
    line-height: @minimumButtonSize;
  }

  > .filter-rearrange {
    display: none;
  }

  > .filter-remove {
    width: @minimumButtonSize;
    height: @minimumButtonSize;
    display: none;
  }

  > .filter-input {
    min-width: 13 * @minimumFontSize;
    margin-right: 0px;
  }

  > .filter-input {
    @{customElementNamespace}input.is-with-param {
      min-width: 20 * @minimumFontSize;
    }
  }

  > .filter-attribute {
    @{customElementNamespace}dropdown.is-editing .dropdown-text {
      width: auto;
      max-width: 300px;
    }
  }
}

@{customElementNamespace}filter.is-sortable {
  > .filter-rearrange {
    .grab-cursor();
    display: inline-block;
    width: 0.75 * @minimumButtonSize;
    opacity: 0.25;
  }

  > .filter-rearrange:hover {
    opacity: 0.5;
    transition: opacity 0.3s ease-in-out;
  }
}

@{customElementNamespace}filter.is-location {
  > .filter-input {
    display: block;
    padding: @minimumSpacing 1.5rem 0px @minimumSpacing + 0.75 *
      @minimumButtonSize + @minimumButtonSize;
    min-width: 19 * @minimumFontSize;
    margin: 0px;
    height: auto;
  }
}

@{customElementNamespace}filter.is-date {
  > .filter-input {
    min-width: 24 * @minimumFontSize;
    height: auto;
  }
}

@{customElementNamespace}filter.is-empty {
  > .filter-input {
    display: none;
  }
}

@{customElementNamespace}filter-collection {
  > @{customElementNamespace}filter.is-editing {
    > .filter-remove {
      display: inline-block;
    }
  }
}

